--- a/package.json
+++ b/package.json
@@ -9,5 +9,14 @@
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "scripts": {
+    "dev": "next dev"
+  }
+  ,
+  "dependencies": {
+    "next": "^13.4.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
